[project]
name = "libero"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.8.*"
dependencies = [
    "bddl==1.0.1",
    "cloudpickle==2.1.0",
    "easydict==1.9",
    "einops==0.4.1",
    "future==0.18.2",
    "gym==0.25.2",
    "hydra-core==1.2.0",
    "matplotlib==3.5.3",
    "numpy==1.22.4",
    "opencv-python==4.6.0.66",
    "robomimic==0.2.0",
    "robosuite==1.4.0",
    "thop==0.1.1.post2209072238",
    "torch==1.11.0+cu113",
    "torchaudio==0.11.0+cu113",
    "torchvision==0.12.0+cu113",
    "transformers==4.21.1",
    "wandb==0.13.1",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu113"
